tests/NormalTests/paczka1/fuzzy1/51257862.err
Error in line 11: S301 A119 166,1
Error in line 23: xm7mSOFq S254 115,3
Error in line 24: xm7mSOFq A135 26,6
Error in line 31: xm7mSOFq A135 59,4
